--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
         <h1 id="status">Loading Pyodide...</h1>
 
         <hr />
-        <i>Welcome to the WASM playground where we learn about IfcOpenShell's WASM build :)</i>
+        <i>Welcome to the WASM playground! It contains the preliminary work, exploration and proof-of-concepts as elaborated in my GSoC 2025 proposal.</i>
 
         <div id="body" style="display: none;">
             <h2>Autocompletion</h2>
